# darknet

./: .gitignore  CMakeLists.txt
custome/: detect.cpp  main.cpp
src/: image.c
